--- a/Q4/makefile
+++ b/Q4/makefile
@@ -4,12 +4,12 @@ COVFLAGS = -fprofile-arcs -ftest-coverage
 PROFFLAGS = -pg
 DEBUGFLAGS = -g
 
-TARGET = graph
+MAIN_TARGET = graph
 
-all: $(TARGET)
+all: $(MAIN_TARGET)
 
-$(TARGET): main.o Graph.o
-	$(CC) $(CFLAGS) -o $(TARGET) main.o Graph.o
+$(MAIN_TARGET): main.o Graph.o
+	$(CC) $(CFLAGS) -o $(MAIN_TARGET) main.o Graph.o
 
 main.o: main.cpp
 	$(CC) $(CFLAGS) -c main.cpp
@@ -18,26 +18,35 @@ Graph.o: Graph.cpp Graph.hpp
 	$(CC) $(CFLAGS) -c Graph.cpp
 
 coverage: CFLAGS += $(COVFLAGS)
-coverage: $(TARGET)
-	./$(TARGET) -v 5 -e 10 -s 12345
-	gcov main.cpp
-	gcov Graph.cpp
+coverage: $(MAIN_TARGET)
+	mkdir -p coverage
+	-./$(MAIN_TARGET) -v 5 -e 10 -s 12345
+	-./$(MAIN_TARGET) -t 5 -f 10 -q 12345
+	-./$(MAIN_TARGET) -v -3 -e -2 -s 12345
+	-./$(MAIN_TARGET) -v a -e b -s 12345
+	gcov main.cpp -o .
+	gcov Graph.cpp -o .
+	lcov --capture --directory . --output-file coverage/coverage.info
+	genhtml coverage/coverage.info --output-directory coverage/html
 
 profile: CFLAGS += $(PROFFLAGS)
-profile: $(TARGET)
-	./$(TARGET) -v 5 -e 10 -s 12345
-	gprof $(TARGET) gmon.out > gprof_report.txt
+profile: $(MAIN_TARGET)
+	mkdir -p profile_data
+	./$(MAIN_TARGET) -v 5 -e 10 -s 12345
+	gprof $(MAIN_TARGET) gmon.out > profile_data/analysis.txt
+	mv gmon.out profile_data/
 
 valgrind: CFLAGS += $(DEBUGFLAGS)
-valgrind: $(TARGET)
-	valgrind --leak-check=full --track-origins=yes ./$(TARGET) -v 5 -e 10 -s 12345
+valgrind: $(MAIN_TARGET)
+	valgrind --leak-check=yes --track-origins=yes --gen-suppressions=all ./$(MAIN_TARGET) -v 5 -e 10 -s 12345 > valgrind_output.txt 2>&1
 
 callgrind: CFLAGS += $(DEBUGFLAGS)
-callgrind: $(TARGET)
-	valgrind --tool=callgrind ./$(TARGET) -v 5 -e 10 -s 12345
+callgrind: $(MAIN_TARGET)
+	valgrind --tool=callgrind ./$(MAIN_TARGET) -v 5 -e 10 -s 12345
 	callgrind_annotate callgrind.out.* > callgrind_report.txt
 
 clean:
-	rm -f *.o $(TARGET) *.gcda *.gcno *.gcov gmon.out callgrind.out.*
+	rm -f *.o $(MAIN_TARGET) *.gcda *.gcno *.gcov gmon.out callgrind.out.* *.txt
+	rm -rf coverage profile_data out
 
 .PHONY: all clean coverage profile valgrind callgrind
